# hopper_opt

./: CMakeLists.txt  package.xml  snopt_problem.out  vec_sample.yaml
include/hdt/: optimization_constants.hpp
include/hdt/contacts/: contact_main.hpp
include/hdt/containers/: constraint_list.hpp  contact_list.hpp  opt_variable.hpp  opt_variable_manager.hpp
include/hdt/hard_constraints/: constraint_main.hpp
include/hdt/objective_functions/: objective_function_main.hpp
include/hdt/optimization_problems/: hopper_jump_opt_problem.hpp  opt_problem_main.hpp
include/hopper_actuator_model/: hopper_actuator_model.hpp
include/hopper_combined_dynamics_model/: hopper_combined_dynamics_model.hpp
include/optimization/: optimization_constants.hpp  snopt_wrapper.hpp
include/optimization/contacts/: contact_main.hpp
include/optimization/contacts/2d_draco/: draco_heel_contact.hpp  draco_toe_contact.hpp
include/optimization/contacts/2d_hopper/: hopper_foot_contact.hpp
include/optimization/containers/: constraint_list.hpp  contact_list.hpp  contact_mode_schedule.hpp  opt_variable.hpp  opt_variable_manager.hpp
include/optimization/hard_constraints/: constraint_main.hpp
include/optimization/hard_constraints/2d_draco/: draco_hybrid_dynamics_constraint.hpp
include/optimization/hard_constraints/2d_hopper/: hopper_active_contact_kinematic_constraint.hpp  hopper_contact_lcp_constraint.hpp  hopper_dynamics_constraint.hpp  hopper_hybrid_dynamics_constraint.hpp  hopper_position_kinematic_constraint.hpp  hopper_time_integration_constraint.hpp
include/optimization/hard_constraints/2d_hopper_act/: hopper_act_active_contact_kinematic_constraint.hpp  hopper_act_hybrid_dynamics_constraint.hpp  hopper_act_position_kinematic_constraint.hpp  hopper_act_time_integration_constraint.hpp
include/optimization/objective_functions/: objective_function_main.hpp
include/optimization/objective_functions/2d_hopper/: hopper_min_torque_objective_func.hpp
include/optimization/objective_functions/2d_hopper_act/: hopper_act_min_torque_objective_func.hpp
include/optimization/optimization_problems/: hopper_jump_opt_problem.hpp  opt_problem_main.hpp
include/optimization/optimization_problems/2d_draco/: draco_jump_opt_problem.hpp
include/optimization/optimization_problems/2d_hopper/: hopper_jump_opt_problem.hpp  hopper_stand_opt_problem.hpp
include/optimization/optimization_problems/2d_hopper_act/: hopper_act_jump_prob.hpp
src/draco_dynamic_model/: DracoModel.cpp  DracoP1Rot_Definition.h  Draco_Kin_Model.cpp
src/hdt/containers/: constraint_list.cpp  contact_list.cpp  opt_variable.cpp  opt_variable_manager.cpp
src/hdt/hopper_dynamic_model/: HopperModel.hpp
src/hopper_actuator_model/: hopper_actuator_model.cpp
src/hopper_combined_dynamics_model/: hopper_combined_dynamics_model.cpp
src/hopper_dynamic_model/: HopperModel.cpp  Hopper_Definition.h
src/optimization/: hopper_act_dynamics_jump_27_kp.txt  hopper_jump_27_kp.txt  snopt_wrapper.cpp
src/optimization/contacts/2d_draco/: draco_heel_contact.cpp  draco_toe_contact.cpp
src/optimization/contacts/2d_hopper/: hopper_foot_contact.cpp
src/optimization/containers/: constraint_list.cpp  contact_list.cpp  contact_mode_schedule.cpp  opt_variable.cpp  opt_variable_manager.cpp
src/optimization/hard_constraints/2d_draco/: draco_hybrid_dynamics_constraint.cpp
src/optimization/hard_constraints/2d_hopper/: hopper_active_contact_kinematic_constraint.cpp  hopper_contact_lcp_constraint.cpp  hopper_dynamics_constraint.cpp  hopper_hybrid_dynamics_constraint.cpp  hopper_position_kinematic_constraint.cpp  hopper_time_integration_constraint.cpp
src/optimization/hard_constraints/2d_hopper_act/: hopper_act_active_contact_kinematic_constraint.cpp  hopper_act_hybrid_dynamics_constraint.cpp  hopper_act_position_kinematic_constraint.cpp  hopper_act_time_integration_constraint.cpp
src/optimization/objective_functions/2d_hopper/: hopper_min_torque_objective_func.cpp
src/optimization/objective_functions/2d_hopper_act/: hopper_act_min_torque_objective_func.cpp
src/optimization/optimization_problems/: hopper_jump_opt_problem.cpp
src/optimization/optimization_problems/2d_draco/: draco_jump_opt_problem.cpp
src/optimization/optimization_problems/2d_hopper/: hopper_jump_opt_problem.cpp  hopper_stand_opt_problem.cpp
src/optimization/optimization_problems/2d_hopper_act/: hopper_act_jump_prob.cpp
src/small_tests/: CMakeLists.txt  test_containers.cpp  test_draco_model.cpp  test_draco_prob_obj.cpp  test_hopper_act_jump_traj.cpp  test_hopper_act_prob_obj.cpp  test_hopper_actuator_model.cpp  test_hopper_combined_model.cpp  test_hopper_contact_obj.cpp  test_hopper_jump_traj.cpp  test_hopper_model.cpp  test_hopper_prob_obj.cpp  test_hopper_stand_traj.cpp  test_interpolation.cpp
src/small_tests/test_val_model/: CMakeLists.txt  test_val_model.cpp
src/valkyrie_dynamic_model/: CMakeLists.txt  ValkyrieRobotModel.cpp  ValkyrieRobotModel.hpp
